still pretty much the first commit

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -18,9 +18,9 @@ body
 
 #header
   @include bodyElems
-  background: #ddf1ff
-  background: -webkit-gradient(linear, 0% 0%, 0% 93%, from(#9AB8FF), to(#9Fb8FF), color-stop(.8,#719fED))
-  background: -moz-linear-gradient(0% 93% 90deg,#9AB8FF, #9Fb8FF, #6193ED 80%)
+  background: #FFf1DD
+  background: -webkit-gradient(linear, 0% 0%, 0% 93%, from(#FFB89A), to(#FFb89F), color-stop(.8,#ED9f71))
+  background: -moz-linear-gradient(0% 93% 90deg,#FFB89A, #FFb89F, #ED9371 80%)
   margin-bottom: 0
   border: 1px solid black
   border-bottom: 0
@@ -34,6 +34,9 @@ body
     float: left
     img
       vertical-align: text-top
+      width: 40px
+    a
+      color: black
     .smallText
       font-size: .2em
   .nav
@@ -43,7 +46,7 @@ body
 
 #main
   @include bodyElems
-  background: #f7fcff
+  background: #fffcf7
   border: 1px solid black
   border-top: 0
   -moz-border-radius-bottomleft: 10px
