--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,8 @@
 %body
   #header
     %h1
-      = link_to image_tag("websightr.png"), "/"
+      = link_to image_tag("logo.png"), "/"
+      = link_to "websightr", "/"
       %span.smallText (beta)
     .nav
       = link_to_unless_current "Home", "/"
