--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -57,6 +57,7 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px; }
   #main #footer {
+    clear: both;
     padding-top: 40px; }
     #main #footer #copyright {
       text-align: center;
@@ -66,13 +67,9 @@ body {
 .contentBlock, form {
   margin-bottom: 3em; }
 
-form {
-  border: 0.18em dotted grey;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  padding: 1em; }
-  form label {
-    display: block; }
+form label {
+  display: block;
+  font-weight: bold; }
 
 textarea {
   height: 4em; }
@@ -113,5 +110,10 @@ h1, h2, h3, h4, h5, h6 {
 .footNotes {
   margin-left: 2em; }
 
-#new_bless_you {
-  width: 22em; }
+.left50, .right50 {
+  width: 50%;
+  float: left; }
+
+a.all {
+  text-align: right;
+  display: block; }
