--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -54,6 +54,7 @@ body
   border-bottom-left-radius: 10px
   border-bottom-right-radius: 10px
   #footer
+    clear: both
     padding-top: 40px
     #copyright
       text-align: center
@@ -65,12 +66,9 @@ body
   
 form
   @extend .contentBlock
-  border: .18em dotted grey
-  -moz-border-radius: 10px
-  border-radius: 10px
-  padding: 1em
   label
     display: block
+    font-weight: bold
 
 textarea
   height: 4em
@@ -111,5 +109,9 @@ h1, h2, h3, h4, h5, h6
 .footNotes
   @extend .smallText
   margin-left: 2em
-#new_bless_you
-  width: 22em
+.left50, .right50
+  width: 50%
+  float: left
+a.all
+  text-align: right
+  display: block
