--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
       WebSightr.com -
       = @title || "social web site creation, envisioning the future of the internet"
     = stylesheet_link_tag "main", "calendar", :cache => true
-    = javascript_include_tag :all, :cache => true
+    = javascript_include_tag :default
     = csrf_meta_tag
 %body
   #header
