opps forgot that line too

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %title
       WebSightr.com -
       = @title || "social web site creation, envisioning the future of the internet"
-    = stylesheet_link_tag "main", "calendar", :cache => true
+    = stylesheet_link_tag "main", "calendar"
     = javascript_include_tag :default
     = csrf_meta_tag
 %body
